Adicionando handlers de edição e busca de usuário logado, implementado seus respectivos testes e2e
